samples/_failures_safe/1761141421_263079_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3948260.c: In function ‘main’:
./samples/SAFE/__tmp_d3948260.c:160:27: error: expected ‘)’ at end of input
  160 |                 if (status
      |                    ~      ^
      |                           )
./samples/SAFE/__tmp_d3948260.c:160:17: error: expected declaration or statement at end of input
  160 |                 if (status
      |                 ^~
./samples/SAFE/__tmp_d3948260.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d3948260.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d3948260.c:160:17: error: expected declaration or statement at end of input
